<resources>
    <string name="app_name">База Автомобильных Номеров</string>
    <string name="car_numbers">Номера автомобиля</string>
    <string name="search_numbers">Поиск по базе</string>
    <string name="region_code">Код региона</string>
    <string name="search_button_text">Искать</string>
    <string name="add_numbers_button_text">Зарегистрировать номера</string>
    <string name="person_name">Имя *</string>
    <string name="person_lastname">Фамилия *</string>
    <string name="date">Дата</string>
    <string name="person_register">Регистрация гражданина</string>
    <string name="person_birthdate">Дата рождения (необязательно)</string>
    <string name="person_fines">Штрафы</string>
    <string name="person_to_fine">Оштрафовать</string>
    <string name="person_phone_number">Номер телефона (необязательно)</string>
    <string name="person_fine_text">Нарушение</string>
    <string name="person_fine_amount">Сумма к оплате</string>
    <string name="person_fine_is_payed">Оплачен</string>
    <string name="person_fine_is_not_payed">Не оплачен</string>
    <string name="person_fine_confirm_pay">Подтвердить оплату</string>
    <string name="person_address">Адрес *</string>
    <string name="person_remove_license">Лишить прав</string>
    <string name="person_give_license">Выдать права</string>
    <string name="save_button">Сохранить</string>
    <string name="go_back_button">Вернуться</string>
    <string name="person_without_violation">Нарушений ПДД не имеется</string>
    <string name="person_with_violation">Гражданин нарушал ПДД</string>
    <string name="person_loading_status">Статус гражданина</string>
    <string name="person_transport_name">Транспортное средство (марка, модель) *</string>
    <string name="person_without_license_warning">У гражданина отсутствуют водительские права!</string>
    <string name="delete">Удалить</string>
    <string name="numbersList">Все номера</string>
</resources>