<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/personStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/person_loading_status"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/person_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10sp"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personLastnameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/person_lastname"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10sp"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personBirthdateEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/person_birthdate"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10sp"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/person_address"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10sp"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personTransportNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/person_transport_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        app:boxStrokeColor="@color/blue"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:counterTextColor="@color/blue"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personCarNumbersEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/car_numbers"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        app:boxStrokeColor="@color/blue"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:counterTextColor="@color/blue"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personRegionCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/region_code"
            android:inputType="number"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/personFinesButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/person_fines"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/save_button"
        android:textColor="@color/white" />

</LinearLayout>