<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/finesListCardView"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/light_blue_for_text_fields">

    <RelativeLayout
        android:id="@+id/finesListRelativeLayoutInCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/person_fine_text"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fineAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fineText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/person_fine_amount"
            android:textColor="@color/blue"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fineDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fineAmount"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/confirmFineIsPayedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/person_fine_confirm_pay"
            android:textColor="@color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/fineIsPayedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/person_fine_is_payed"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>