<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.ToFinePersonActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fineTextEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:counterEnabled="true"
        app:counterMaxLength="60"
        app:counterTextColor="@color/blue"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/person_fine_text"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fineAmountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/blue"
        app:boxBackgroundColor="@color/light_blue_for_text_fields"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/person_fine_amount"
            android:textColor="@color/black"
            android:inputType="number"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/go_back_button"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/toFineButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="@color/warning_red"
        android:text="@string/person_to_fine"
        android:textColor="@color/white"
        />

</LinearLayout>