<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PersonFinesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:padding="16dp"
        >


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/finesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/fine_item"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/noFinesImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_fines_v2"
            android:layout_centerInParent="true"
            android:visibility="visible"
            />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/personLicenseRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/personRemoveLicenseButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/warning_red"
                android:text="@string/person_remove_license"
                android:textColor="@color/white"
                android:visibility="visible" />

            <Button
                android:id="@+id/personGiveLicenseButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/green"
                android:text="@string/person_give_license"
                android:textColor="@color/white"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/finesGoBackButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/personToFineButton"
            android:text="@string/go_back_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/personToFineButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/personLicenseRelativeLayout"
            android:backgroundTint="@color/warning_yellow"
            android:text="@string/person_to_fine"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>